@@ -34,7 +34,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jenkinsci.plugins</groupId>
   <artifactId>pipeline-model-parent</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>${changelist}</version>
   <packaging>pom</packaging>
   <name>Pipeline: Model Parent POM</name>
   <description>An opinionated, declarative Pipeline</description>
@@ -75,7 +75,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-2.319.x</artifactId>
-        <version>1090.v0a_33df40457a_</version>
+        <version>1117.v62a_f6a_01de98</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -83,6 +83,12 @@
         <groupId>org.jenkins-ci.main</groupId>
         <artifactId>jenkins-test-harness-tools</artifactId>
         <version>2.2</version>
+      </dependency>
+      <!-- TODO remove this dependency when it is available in the plugin-pom -->
+      <dependency>
+        <groupId>org.jenkins-ci.main</groupId>
+        <artifactId>jenkins-test-harness</artifactId>
+        <version>1697.v6b_1e34cb_4ee6</version>
       </dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
@@ -110,11 +116,6 @@
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>pipeline-milestone-step</artifactId>
         <version>1.3.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>ant</artifactId>
-        <version>1.13</version>
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
@@ -158,13 +159,11 @@
   </build>
 
   <properties>
-    <revision>1.9.4</revision>
-    <changelist>-SNAPSHOT</changelist>
+    <changelist>999999-SNAPSHOT</changelist>
     <gitHubRepo>jenkinsci/pipeline-model-definition-plugin</gitHubRepo>
     <jenkins.version>2.321</jenkins.version>
     <java.level>8</java.level>
     <groovy.version>2.4.12</groovy.version>
-    <argLine>-Djava.awt.headless=true -Xmx4g -Xms512m -XX:MaxPermSize=512m</argLine>
   </properties>
 
   <profiles>
@@ -219,32 +218,6 @@
                 <org.jenkinsci.plugins.pipeline.modeldefinition.parser.RuntimeASTTransformer.SCRIPT_SPLITTING_TRANSFORMATION>true</org.jenkinsci.plugins.pipeline.modeldefinition.parser.RuntimeASTTransformer.SCRIPT_SPLITTING_TRANSFORMATION>
                 <org.jenkinsci.plugins.pipeline.modeldefinition.parser.RuntimeASTTransformer.SCRIPT_SPLITTING_ALLOW_LOCAL_VARIABLES>true</org.jenkinsci.plugins.pipeline.modeldefinition.parser.RuntimeASTTransformer.SCRIPT_SPLITTING_ALLOW_LOCAL_VARIABLES>
               </systemPropertyVariables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>resource-constrained</id>
-      <activation>
-        <property>
-          <name>env.CI</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <!-- TODO flakes on CI for inscrutable reasons -->
-              <excludes>
-                <exclude>org.jenkinsci.plugins.pipeline.modeldefinition.BasicModelDefTest</exclude>
-                <exclude>org.jenkinsci.plugins.pipeline.modeldefinition.MatrixTest</exclude>
-                <exclude>org.jenkinsci.plugins.pipeline.modeldefinition.WhenStageTest</exclude>
-                <exclude>org.jenkinsci.plugins.pipeline.modeldefinition.WhenStageMultibranchTest</exclude>
-                <exclude>org.jenkinsci.plugins.pipeline.modeldefinition.PostStageTest</exclude>
-                <exclude>org.jenkinsci.plugins.pipeline.modeldefinition.ToolsTest</exclude>
-              </excludes>
             </configuration>
           </plugin>
         </plugins>
